@@ -1,5 +1,6 @@
 package ru.kata.spring.boot_security.demo.configs;
 
+import ru.kata.spring.boot_security.demo.dao.RoleDao;
 import ru.kata.spring.boot_security.demo.dao.UserDao;
 import ru.kata.spring.boot_security.demo.model.Role;
 import ru.kata.spring.boot_security.demo.model.User;
@@ -10,14 +11,17 @@ import javax.transaction.Transactional;
 import java.util.HashSet;
 import java.util.List;
 
+
 @Component
 public class DataInitializer implements CommandLineRunner {
 
     private final UserDao userDao;
+    private final RoleDao roleDao;
     private final PasswordEncoder passwordEncoder;
 
-    public DataInitializer(UserDao userDao, PasswordEncoder passwordEncoder) {
+    public DataInitializer(UserDao userDao, RoleDao roleDao, PasswordEncoder passwordEncoder) {
         this.userDao = userDao;
+        this.roleDao = roleDao;
         this.passwordEncoder = passwordEncoder;
     }
 
@@ -25,15 +29,16 @@ public class DataInitializer implements CommandLineRunner {
     @Transactional
     public void run(String... args) {
 
-        if (userDao.getAllRoles().isEmpty()) {
-            userDao.saveUser(new Role("ADMIN"));
-            userDao.saveUser(new Role("USER"));
+        if (roleDao.getAllRoles().isEmpty()) {
+            roleDao.saveRole(new Role("ADMIN"));
+            roleDao.saveRole(new Role("USER"));
         }
 
+        // 🔹 2. Создаём админа, если нет (используем UserDao)
         if (userDao.getUserByUsername("admin") == null) {
-            List<Role> roles = userDao.getAllRoles();
+            List<Role> roles = roleDao.getAllRoles();
             Role adminRole = roles.stream()
-                    .filter(r -> r.getName().equals("ADMIN"))
+                    .filter(r -> "ADMIN".equals(r.getName()))
                     .findFirst()
                     .orElse(null);
 
@@ -45,15 +50,16 @@ public class DataInitializer implements CommandLineRunner {
                         "admin@test.com",
                         30
                 );
-                admin.setRoles(new HashSet<>(java.util.Collections.singletonList(adminRole)));
+                admin.setRoles(new HashSet<>(List.of(adminRole)));
                 userDao.saveUser(admin);
             }
         }
 
+
         if (userDao.getUserByUsername("user") == null) {
-            List<Role> roles = userDao.getAllRoles();
+            List<Role> roles = roleDao.getAllRoles();
             Role userRole = roles.stream()
-                    .filter(r -> r.getName().equals("USER"))
+                    .filter(r -> "USER".equals(r.getName()))
                     .findFirst()
                     .orElse(null);
 
@@ -65,7 +71,7 @@ public class DataInitializer implements CommandLineRunner {
                         "user@test.com",
                         25
                 );
-                user.setRoles(new HashSet<>(java.util.Collections.singletonList(userRole)));
+                user.setRoles(new HashSet<>(List.of(userRole)));
                 userDao.saveUser(user);
             }
         }
